--- a/glcporfolio/src/Components/ItemListContainer/ItemListContainer.css
+++ b/glcporfolio/src/Components/ItemListContainer/ItemListContainer.css
@@ -30,7 +30,145 @@ section{
         color: white;
     }
 
+    .o-container {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: rem(1520px);
+   }
+    @media (max-width: 699px) {
+        .o-container {
+            padding-right: 20px;
+            padding-left: 20px;
+       }
+   }
+    @media (min-width: 700px) {
+        .o-container {
+            padding-right: rem(40px);
+            padding-left: rem(40px);
+       }
+   }
 
-}
+    .o-title {
+        margin: 0;
+        padding: rem(40px) 0;
+        perspective: 600px;
+        -webkit-perspective: 600px;
+    }
+    
+    
+    .o-title_line {
+        display: block;
+        opacity: 0;
+        transform-origin: center top;
+        transform-style: preserve-3d;
+        transform: translateY(100%) rotateX(-80deg);
+        transition: opacity 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000), transform 0.8s cubic-bezier(0.215, 0.610, 0.355, 1.000);
+        font-size: 0;
+    
+        .o-title.is-inview & {
+            transform: none;
+            opacity: 1;
+    
+            transition-delay: 0.3 + 1*0.1s;
+            transition-delay: 0.3 + 2*0.1s;
+            transition-delay: 0.3 + 3*0.1s;
+            transition-delay: 0.3 + 4*0.1s;
+                
+            }
+        }
+    
+        span {
+            display: inline-block;
+            min-width: 0.05em;
+            font-size: 13.5vw;
+        }
+
+        @media (max-width: 699px) {
+            .c-damn {
+                padding: 150vh 0 0 0;
+           }
+       }
+        @media (min-width: 1000px) {
+            .c-damn {
+                padding: 100vh 0 0 0;
+           }
+       }
+
+
+       .c-section {
+        position: relative;
+    
+        @media (max-width: 1200px-1) {
+            padding-bottom: 10vh;
+            margin-bottom: 10vh;
+        }
+    
+        @media (min-width: 1200px) {
+            margin-bottom: 35vh;
+        }
+    }
+    
+    .c-section_infos {
+        position: relative;
+        max-width: 320px;
+        z-index: 0;
+    
+        @media (min-width: 1000px) {
+            padding-top: rem(60px * 2);
+    
+            &.-padding {
+                padding-top: 35vh;
+            }
+        }
+    
+        @media (max-width: 1000px-1) {
+            margin-bottom: rem(60px / 2);
+        }
+    }
+    
+    .c-section_infos_inner {
+        > * {
+            opacity: 0;
+            transform: translateY(60px);
+            transition: opacity 0.6s cubic-bezier(0.215, 0.610, 0.355, 1.000), transform 0.6s cubic-bezier(0.215, 0.610, 0.355, 1.000);
+        }
+    
+        &.is-inview {
+            > * {
+                opacity: 1;
+                transform: none;
+    
+                
+                    
+                        transition-delay: 1*0.06s;
+                    
+                
+            }
+        }
+    }
+    
+    .c-sections_infos_text {
+        margin-top: rem(20px);
+    }
+    
+    .c-image {
+        opacity: 0;
+        transition: opacity 0.6s cubic-bezier(0.215, 0.610, 0.355, 1.000);
+    
+        &.is-inview {
+            opacity: 1;
+            transition-delay: 0.6s;
+        }
+    }
+
+    }
+
+
+    
+
+    
+
+
+
 
 
