--- a/glcporfolio/src/Components/ItemListContainer/ItemListContainer.css
+++ b/glcporfolio/src/Components/ItemListContainer/ItemListContainer.css
@@ -98,10 +98,10 @@ section{
        .c-section {
         position: relative;
     
-        @media (max-width: 1200px-1) {
+        /* @media (max-width: 1200px-1) {
             padding-bottom: 10vh;
             margin-bottom: 10vh;
-        }
+        } */
     
         @media (min-width: 1200px) {
             margin-bottom: 35vh;
