--- a/glcporfolio/src/Components/NavBar/NavBar.css
+++ b/glcporfolio/src/Components/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-nav {
+/* nav {
     background-color: #282c34;
     padding: 10px 0;
   }
@@ -19,4 +19,90 @@ nav {
   
   .nav-item:hover {
     color: #61dafb;
+  } */
+
+  .menu {
+    filter: drop-shadow(1px 1px 1px #4700b3);
+    width: 300px;
+  }
+  
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background: var(--accent);
+  }
+  
+  li {
+    color: var(--background);
+    display: block;
+  }
+  
+  ul,
+  li {
+    list-style: none;
+    margin: 0;
+    padding: 10px;
+  }
+  
+  button {
+    -webkit-appearance: button;
+    background: var(--accent);
+    color: var(--background);
+    border: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+    font-size: 18px;
+    font-weight: 700;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  button path {
+    fill: var(--background);
+  }
+
+  .box {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background: var(--accent);
+    margin: 0;
+  }
+
+  .item {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    background: var(--accent);
+    color: var(--background);
+    font-size: 240px;
+    line-height: 260px;
+    font-weight: 700;
+    border-radius: 30px;
+  }
+
+  input[type="number"] {
+    border: 0;
+    border-bottom: 1px dotted var(--accent);
+    color: var(--accent);
+    margin-left: 10px;
+    background: var(--background);
+    width: 50px;
+  }
+  
+  input[type="number"]:focus {
+    outline: none;
+    border-bottom: 2px solid var(--accent);
+  }
+  
+  input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
   }
